<resources>
    <!-- Globales -->
    <string name="app_name">Club Deportivo</string>
    <string name="desc_logo">logo club deportivo</string>

    <!-- Pantalla: Login -->
    <string name="txt_titulo_login">CLUB DEPORTIVO</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="hint_usuario">ingresar usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="hint_password">ingresar contraseña</string>
    <string name="btn_iniciar_sesion">iniciar sesion</string>

    <!-- Pantalla: Menú Principal -->
    <string name="txt_saludo_admin">Hola Admin!</string>
    <string name="btn_inscribir">Inscribir Persona</string>
    <string name="btn_pagar">Pagar Cuota</string>
    <string name="btn_vencimientos">Listar Vencimientos</string>
    <string name="btn_salir">Salir</string>

    <!-- Pantalla: Comprobante y Carnet-->
    <string name="nombre_socio">Doe, John</string>
    <string name="msj_pago_exito">Pago realizado con éxito</string>
    <string name="icn_exito">Ícono de éxito</string>
    <string name="importe_pagado">Importe pagado:</string>
    <string name="detalle_del_pago">Detalle del Pago:</string>
    <string name="n_de_socio">Nº de Socio</string>
    <string name="n_de_no_socio">Nº de No-Socio</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="forma_de_pago">Forma de Pago</string>
    <string name="actividad">Actividad</string>
    <string name="btn_imprimir_comprobante">Imprimir Comprobante</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="carnet_club_deportivo">Carnet Club Deportivo</string>
    <string name="detalle_del_socio">Detalle del Socio:</string>
    <string name="dni">DNI</string>
    <string name="btn_imprimir_carnet">Imprimir Carnet</string>
    <string name="icono_de_pelota">ícono de pelota</string>

    <!-- Pantalla: Incribir Persona-->
    <string name="formulario_inscripcion">Formulario de Inscripción</string>
    <string name="flecha_de_regreso">Flecha de regreso</string>
    <string name="continuar">Continuar</string>
    <string name="ingresar_email">Ingresar Correo Electrónico</string>
    <string name="apto_medico">Apto Médico</string>
    <string name="lbl_direccion">Ingresar Dirección</string>
    <string name="lbl_telefono">Ingresar Teléfono</string>
    <string name="telefono">Teléfono</string>
    <string name="lbl_dni">Ingresar DNI</string>
    <string name="lbl_usuarios">Usuarios Activos</string>
    <string name="btn_registrar_pago">Registrar Pago</string>
    <string name="ingresar_nombre">Ingresar Nombre</string>
    <string name="ingresar_apellido">Ingresar Apellido</string>

    <!-- Pantalla: Completar Inscripción -->
    <string name="lbl_tipo_inscripcion">Tipo de Inscripción</string>
    <string name="selector_de_actividades">Selector de Actividades</string>
    <string name="ingresar_monto">Ingresar Monto</string>
    <string name="fecha_de_pago">Fecha de Pago</string>
    <string name="completar_inscripcion">Completar Inscripción</string>
    <string name="no_socio">No Socio</string>
    <string name="socio">Socio</string>
    <string name="ver_carnet">Ver Carnet</string>

    <!-- Pantalla: Pagar Cuota -->
    <string name="pagar_cuota">Pagar Cuota</string>

    <!-- Pantalla: Vencimientos -->
    <string name="vencimientos">Vencimientos</string>
    <string name="fecha_a_consultar">Fecha a Consultar</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="solo_vencimientos_de_ese_dia">Solo vencimientos de ese día</string>
    <string name="no_hay_coincidencias_para_esta_busqueda">No hay coincidencias para esta búsqueda</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="icono_socio">Icono Socio</string>



</resources>