<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inscribirPersona"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/background"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:paddingBottom="80dp"
    android:clipToPadding="false">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        Flecha Volver y Título      -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:padding="20dp">

            <!--        Flecha Volver      -->
            <ImageView
                android:id="@+id/btn_volver"
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/flecha_de_regreso"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/formulario_inscripcion"
                android:textSize="25sp"
                android:gravity="center_vertical"
                />
        </LinearLayout>

    <!--        Formulario     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <!--        Input: Nombre      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:id="@+id/til_nombre"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/ingresar_nombre"
            app:placeholderText="Nombre"
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="Nombre"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input: Apellido      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_apellido"
            android:layout_marginBottom="30dp"
            android:hint="@string/ingresar_apellido"
            app:placeholderText="Apellido"
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_apellido"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="Apellido"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input: DNI      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_dni"
            android:layout_marginBottom="30dp"
            android:hint="@string/lbl_dni"
            app:placeholderText="dni"
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dni"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="DNI"
                android:inputType="number"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input: Teléfono      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_telefono"
            android:layout_marginBottom="30dp"
            android:hint="@string/lbl_telefono"
            app:placeholderText="@string/telefono"
            app:startIconDrawable="@drawable/ic_phone"
            app:helperText="Ingresalo con cód. de área, sin 0 ni 15."
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_telefono"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/telefono"
                android:inputType="number"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input: Dirección      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_direccion"
            android:layout_marginBottom="30dp"
            android:hint="@string/lbl_direccion"
            app:placeholderText="Dirección"
            app:startIconDrawable="@drawable/baseline_house_24"
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_direccion"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="Dirección"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input: Email      -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_email"
            android:layout_marginBottom="30dp"
            android:hint="@string/ingresar_email"
            app:placeholderText="ejemplo@email.com"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:textColorHint="@color/text_label"
            app:hintTextColor="@color/primary_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        checkbox: Apto médico      -->
        <CheckBox
            android:id="@+id/cb_aptoMedico"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/apto_medico"
            android:layout_marginBottom="5dp"
            android:textSize="16sp" />


    </LinearLayout>

    <!--        Botón Continuar a Completar Inscripción     -->
    <Button
        android:id="@+id/btn_completar_inscripcion"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/continuar"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>
</ScrollView>