<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/menu"
    android:fontFamily="@font/roboto">

<!--    Imagen y título-->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="166dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_margin="7dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_pelota_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/carnet_club_deportivo"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

<!--    Nombre del Socio-->
    <TextView
        android:id="@+id/nombreSocio"
        android:layout_width="350dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/curved_border"
        android:backgroundTint="@color/material_dynamic_tertiary90"
        android:drawablePadding="15dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Doe, John"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/outline_person_outline_24"
        app:iconGravity="textStart"/>

<!--   Detalle del socio-->
    <TextView
        style="@style/MyTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/detalle_del_socio"
        android:textAlignment="textStart"
        android:textStyle="bold" />

<!--    fila DNI-->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/curved_border"
        android:backgroundTint="@color/material_dynamic_tertiary95"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            style="@style/MyTextStyle"
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/dni" />

        <TextView
            android:id="@+id/nroSocio"
            style="@style/MyTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical|end"
            android:text="20.421.934" />
    </LinearLayout>

    <!--    fila Vencimiento-->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/curved_border"
        android:backgroundTint="@color/material_dynamic_tertiary95"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            style="@style/MyTextStyle"
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/vencimiento"/>

        <TextView
            android:id="@+id/fechaVencimiento"
            style="@style/MyTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical|end"
            android:text="07/06/2026"/>
    </LinearLayout>

    <!--    fila Nº de socio-->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/curved_border"
        android:backgroundTint="@color/material_dynamic_tertiary95"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            style="@style/MyTextStyle"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/n_de_socio" />

        <TextView
            android:id="@+id/tipoDePago"
            style="@style/MyTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical|end"
            android:text="007" />
    </LinearLayout>

    <!--    Botón imprimir-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_imprimir_carnet"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_imprimir_carnet"
        app:icon="@drawable/baseline_share_24"
        app:iconGravity="textStart" />

    <!--    Botón Finalizar-->
    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FDFDFD"
        android:text="@string/btn_finalizar"
        android:textColor="#000000" />
</LinearLayout>
